--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div>
+    <div id="mainDiv">
         <table id="mainPanel">
             <tr>
                 <th>Escolha a escala:</th>
