--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Escalas</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
-<body>
-    <div id="mainDiv">
+
+<body class="center">
+    <div class="center-table">
         <table id="mainPanel">
             <tr>
                 <th>Escolha a escala:</th>
