Ajuste do layout e de uma falha na lógica

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="center-layout">
+    <div id="container">
         <div class="input-block">
             <h2>De:</h2>
             <select name="initialScales" id="scaleInput">
